@@ -78,6 +78,7 @@
 	-- API tests
 	dofile("api/test_array_kind.lua")
 	dofile("api/test_callback.lua")
+	dofile("api/test_path_kind.lua")
 	dofile("api/test_register.lua")
 	dofile("api/test_string_kind.lua")
 
